# C_star

./: .gitignore  CMakeLists.txt  main.cpp
includes/: Parser.h  Scanner.h  Terminal.h
src/: Parser.cpp  Scanner.cpp  Terminal.cpp  main.cpp
tests/: ParserTests.cpp  ScannerTests.cpp
tests/exampmles/: operators_scanner.cst  operators_scanner.cstoperators_scanner.cstt  symbols_scanner.cst  symbols_scanner.cstsymbols_scanner.cstt  variables_declaration_scanner.cst  variables_declaration_scanner.cstvariables_declaration_scanner.cstt
